--- a/vue_blog_admin/package.json
+++ b/vue_blog_admin/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.21.0",
     "element-ui": "^2.14.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
