--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
         <java.version>1.8</java.version>
         <mybatis.plus.version>3.4.1</mybatis.plus.version>
         <druid.version>1.2.2</druid.version>
+        <fastjson.version>1.2.75</fastjson.version>
+        <swagger.version>1.9.0.RELEASE</swagger.version>
+        <jjwt.version>0.9.1</jjwt.version>
     </properties>
 
     <dependencies>
@@ -23,7 +26,7 @@
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
-            <version>0.9.1</version>
+            <version>${jjwt.version}</version>
         </dependency>
         <!--sping validator 字段校验-->
         <dependency>
@@ -34,7 +37,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.75</version>
+            <version>${fastjson.version}</version>
         </dependency>
         <!-- lang3 工具包-->
         <dependency>
@@ -50,7 +53,7 @@
         <dependency>
             <groupId>com.spring4all</groupId>
             <artifactId>swagger-spring-boot-starter</artifactId>
-            <version>1.9.0.RELEASE</version>
+            <version>${swagger.version}</version>
         </dependency>
 
         <!--mybatis-plus反编译代码-->
